Upgrade to Gradle 4.6